Fix publication button spacing (#1322)

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1211,6 +1211,7 @@ nav[data-toggle="toc"] {
           padding-right: 1rem;
           padding-top: 0.25rem;
           padding-bottom: 0.25rem;
+          margin-left: 0;
 
           &:hover {
             color: var(--global-theme-color);
@@ -1220,11 +1221,12 @@ nav[data-toggle="toc"] {
       }
 
       .badges {
+        padding-bottom: 0.5rem;
         span {
           display: inline-block;
           color: $black-color;
           height: 100%;
-          padding-left: 0.5rem;
+          padding-right: 0.5rem;
           vertical-align: middle;
 
           &:hover {
